--- a/1.utilities/variables.scss
+++ b/1.utilities/variables.scss
@@ -11,27 +11,42 @@ $breakpoints:   (
 
 // Colors
 $colors: (
-	"black":     hsl(0, 0%, 4%),
-	"dark":      hsl(0, 0%, 30%),
-	"grey":      hsl(0, 0%, 70%),
-	"light":     hsl(0, 0%, 98%),
+	"black":          hsl(0, 0%, 4%),
+	"dark":           hsl(0, 0%, 30%),
+	"grey":           hsl(0, 0%, 70%),
+	"light":          hsl(0, 0%, 98%),
 
-	"red":       hsl(348, 86%, 61%),
-	"orange":    hsl(14, 100%, 53%),
-	"yellow":    hsl(48, 100%, 67%),
-	"green":     hsl(141, 53%, 53%),
-	"turquoise": hsl(171, 100%, 41%),
-	"cyan":      hsl(204, 71%, 53%),
-	"blue":      hsl(217, 71%, 53%),
-	"purple":    hsl(271, 100%, 71%),
+	"red":            hsl(348, 86%, 61%),
+	"orange":         hsl(14, 100%, 53%),
+	"yellow":         hsl(48, 100%, 67%),
+	"green":          hsl(141, 53%, 53%),
+	"turquoise":      hsl(171, 100%, 41%),
+	"cyan":           hsl(204, 71%, 53%),
+	"blue":           hsl(217, 71%, 53%),
+	"purple":         hsl(271, 100%, 71%),
+	"lightred":       hsl(348, 86%, 81%),
+	"lightorange":    hsl(14, 100%, 73%),
+	"lightyellow":    hsl(48, 100%, 87%),
+	"lightgreen":     hsl(141, 53%, 73%),
+	"lightturquoise": hsl(171, 100%, 81%),
+	"lightcyan":      hsl(204, 71%, 73%),
+	"lightblue":      hsl(195, 53%, 73%),
+	"lightpurple":    hsl(271, 100%, 91%),
 )!default;
 
-$text:         map-get($colors, black) !default;
-$border:       map-get($colors, grey) !default;
-$link:         map-get($colors, blue) !default;
-$link-hover:   map-get($colors, dark) !default;
-$link-visited: map-get($colors, dark) !default;
-$link-active:  map-get($colors, dark) !default;
+$text:                map-get($colors, "black") !default;
+$border:              map-get($colors, "dark") !default;
+$border-width:        1px !default;
+
+$link:                map-get($colors, "blue") !default;
+$link-hover:          map-get($colors, "dark") !default;
+$link-hover-border:   map-get($colors, "grey") !default;
+$link-focus:          map-get($colors, "dark") !default;
+$link-focus-border:   map-get($colors, "grey") !default;
+$link-visited:        map-get($colors, "dark") !default;
+$link-visited-border: map-get($colors, "grey") !default;
+$link-active:         map-get($colors, "dark") !default;
+$link-active-border:  map-get($colors, "grey") !default;
 
 // Typography
 $family-sans-serif: BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto",
