--- a/2.base/form.scss
+++ b/2.base/form.scss
@@ -1,6 +1,10 @@
-$input-shadow: 0 0 1px 2px #00000011;
-$textarea-max-height: 40em !default;
-$textarea-min-height: 8em !default;
+$input-border:             $border !default;
+$input-border-width:       $border-width !default;
+$input-shadow:             0 0 1px 2px #00000011;
+$input-padding-vertical:   0.5em;
+$input-padding-horizontal: 0.5em;
+$textarea-max-height:      40em !default;
+$textarea-min-height:      8em !default;
 
 .field {
 	&:not(:last-child) {
@@ -11,6 +15,10 @@ $textarea-min-height: 8em !default;
 %input-textarea {
 	box-sizing: border-box;
 	box-shadow: $input-shadow;
+	border-color: $input-border;
+	border-width: $input-border-width;
+	border-style: solid;
+	padding: $input-padding-vertical $input-padding-horizontal;
 	max-width: 100%;
 	width: 100%;
 
