--- a/2.base/typography.scss
+++ b/2.base/typography.scss
@@ -1,26 +1,40 @@
-$family: $family-sans-serif;
-$paragraph-margin-bottom: 1em !default;
-$label-color: map-get($colors, grey) !default;
-$label-font-size: 0.85em !default;
-$label-margin-bottom: 0.5em !default;
+$family:                   $family-sans-serif;
+$title-margin-bottom:      0.5em !default;
+$subtitle-margin-bottom:   0.5em !default;
+$subtitle-collapse-margin: 0.25em !default;
+$paragraph-margin-bottom:  1em !default;
+$label-color:              map-get($colors, grey) !default;
+$label-font-size:          0.85em !default;
+$label-margin-bottom:      0.5em !default;
 
 
 body {
 	font-family: $family;
+	line-height: 1.15;
 }
 
 .title {
 	font-size: 3em;
-	margin-bottom: 1em;
+	&:not(:last-child) {
+		margin-bottom: $title-margin-bottom;
+	}
 }
 
 .subtitle {
 	font-size: 2em;
-	margin-bottom: 1em;
+	&:not(:last-child) {
+		margin-bottom: $subtitle-margin-bottom;
+	}
+
+	.title + & {
+		margin-top: -$subtitle-collapse-margin;
+	}
 }
 
 .paragraph {
-	margin-bottom: $paragraph-margin-bottom;
+	&:not(:last-child) {
+		margin-bottom: $paragraph-margin-bottom;
+	}
 }
 
 .label {
