--- a/3.layout/container.scss
+++ b/3.layout/container.scss
@@ -21,6 +21,7 @@ $section-normal-padding: 2em;
 	box-sizing: border-box;
 	margin: 0 auto;
 	padding: 0 $gap;
+	width: 100%;
 
 	@each $name, $bp in $breakpoints {
 		@include gt($bp) {
