--- a/4.elements/card.scss
+++ b/4.elements/card.scss
@@ -1,14 +1,18 @@
-$card-color: inherit !default;
-$card-background-color: white !default;
-$card-border: 1px solid #ccc !default;
-$card-border-radius: $radius !default;
-$card-border-inner: $card-border !default;
+$card-color:              inherit !default;
+$card-background-color:   white !default;
+$card-border:             $border !default;
+$card-border-width:       $border-width !default;
+$card-border-radius:      $radius !default;
+$card-border-inner:       $card-border !default;
+$card-border-inner-width: $border-width !default;
 
 .card {
-	color: $card-color;
+	color:            $card-color;
 	background-color: $card-background-color;
-	border: $card-border;
-	border-radius: $card-border-radius;
+	border-color:     $card-border;
+	border-width:     $card-border-width;
+	border-style:     solid;
+	border-radius:    $card-border-radius;
 
 	.card-header {
 		box-shadow: 0 -1px 0 0 #00000021;
@@ -20,7 +24,13 @@ $card-border-inner: $card-border !default;
 		//TODO
 	}
 
-	> * + * {
-		border-top: $card-border-inner;
+	> *:not(:first-child) {
+		border-top-color: $card-border-inner;
+		border-top-width: $card-border-inner-width;
+		border-top-style: solid;
+	}
+
+	&:not(:last-child) {
+		margin-bottom: 1em;
 	}
 }
