Split init and main

--- a/3.layout/columns.scss
+++ b/3.layout/columns.scss
@@ -39,6 +39,7 @@ desktop breakpoint.
 	.column {
 		box-sizing: border-box;
 		display: block;
+		box-sizing: border-box;
 		flex-basis: 0;
 		flex-grow: 1;
 		flex-shrink: 1;
