--- a/main.scss
+++ b/main.scss
@@ -5,5 +5,6 @@
 @import "3.layout/columns";
 @import "3.layout/container";
 
-@import "4.elements/card";
 @import "4.elements/button";
+
+@import "5.components/card";
