--- a/main.scss
+++ b/main.scss
@@ -1,9 +1,11 @@
+@import "2.base/general.scss";
 @import "2.base/typography.scss";
 @import "2.base/utils.scss";
 @import "2.base/form.scss";
 
 @import "3.layout/columns";
 @import "3.layout/container";
+@import "3.layout/section";
 
 @import "4.elements/button";
 
