--- a/1.utilities/responsive.scss
+++ b/1.utilities/responsive.scss
@@ -1,10 +1,16 @@
 @mixin gt($bp) {
+	@if type-of($bp) == string {
+		$bp: map-get($breakpoints, $bp);
+	}
 	@media only screen and (min-width: $bp) {
 		@content;
 	}
 }
 
 @mixin lt($bp) {
+	@if type-of($bp) == string {
+		$bp: map-get($breakpoints, $bp);
+	}
 	@media only screen and (max-width: $bp) {
 		@content;
 	}
