--- a/2.base/general.scss
+++ b/2.base/general.scss
@@ -2,6 +2,7 @@ $body-min-width: 300px;
 $body-size: 16px !default;
 
 html {
+	color: $text;
 	min-width: $body-min-width;
 	font-size: $body-size;
 	text-rendering: $render-mode;
