--- a/3.layout/section.scss
+++ b/3.layout/section.scss
@@ -1,10 +1,11 @@
 $section-large-padding: 4em;
 $section-medium-padding: 2em;
-$section-normal-padding: 2em;
+$section-small-padding: 2em;
 
 .section {
-	padding: $section-normal-padding 0;
-
+	&.is-small {
+		padding: $section-small-padding 0;
+	}
 	&.is-medium {
 		padding: $section-medium-padding 0;
 	}
