--- a/src/3.layout/columns.scss
+++ b/src/3.layout/columns.scss
@@ -1,6 +1,5 @@
-$column-gap: 0.75em!default;
 $column-num: 12 !default;
-$columns-margin-bottom: 1.5em;
+$column-gap: 1rem;
 
 /*
 
@@ -12,62 +11,62 @@ desktop breakpoint.
 */
 
 .columns {
-	display: flex;
-	margin: -$column-gap;
+  display: flex;
+  flex-wrap: wrap;
 
-  &:not(:last-child) {
-    margin-bottom: $columns-margin-bottom - $column-gap;
-	}
-	&.is-centered {
-		justify-content: center;
-	}
-	&.is-vcentered {
-		align-items: center;
-	}
-	&.is-wrapped {
-		flex-wrap: wrap;
-	}
+	margin: -$column-gap/2;
 
-	@each $name, $bp in $breakpoints {
-		@include lt($bp) {
-			&.is-#{$name} {
-				display: block;
-			}
-		}
-	}
+  &.is-centered {
+    justify-content: center;
+  }
 
-	.column {
-		box-sizing: border-box;
-		display: block;
-		box-sizing: border-box;
-		flex-basis: 0;
-		flex-grow: 1;
-		flex-shrink: 1;
-		padding: $column-gap;
+  &.is-vcentered {
+    align-items: center;
+  }
 
-		@for $i from 1 through $column-num {
-			&.is-#{$i} {
-				flex: none;
-				width: $i/$column-num * 100%;
-			}
-			&.is-offset-#{$i} {
-				margin-left: $i/$column-num * 100%;
-			}
-		}
+  &.is-not-wrapped {
+    flex-wrap: nowrap;
+  }
 
-		@each $name, $bp in $breakpoints {
-			@include gt($bp) {
-				@for $i from 1 through $column-num {
-					&.is-#{$i}-#{$name} {
-						flex: none;
-						width: $i/$column-num * 100%;
-					}
-					&.is-offset-#{$i}-#{$name} {
-						margin-left: $i/$column-num * 100%;
-					}
-				}
-			}
-		}
-	}
+  @each $name, $bp in $breakpoints {
+    @include lt($bp) {
+      &.is-#{$name} {
+        display: block;
+      }
+    }
+  }
 }
 
+.column {
+  box-sizing: border-box;
+  display: block;
+  box-sizing: border-box;
+  flex-basis: 0;
+  flex-grow: 1;
+  flex-shrink: 1;
+	padding: $column-gap/2;
+
+  @for $i from 1 through $column-num {
+    &.is-#{$i} {
+      flex: none;
+      width: $i/$column-num * 100%;
+    }
+    &.is-offset-#{$i} {
+      margin-left: $i/$column-num * 100%;
+    }
+  }
+
+  @each $name, $bp in $breakpoints {
+    @include gt($bp) {
+      @for $i from 1 through $column-num {
+        &.is-#{$i}-#{$name} {
+          flex: none;
+          width: $i/$column-num * 100%;
+        }
+        &.is-offset-#{$i}-#{$name} {
+          margin-left: $i/$column-num * 100%;
+        }
+      }
+    }
+  }
+}
