--- a/src/main.scss
+++ b/src/main.scss
@@ -8,5 +8,7 @@
 @import "3.layout/section";
 
 @import "4.elements/button";
+@import "4.elements/box";
+@import "4.elements/swatch";
 
 @import "5.components/card";
