--- a/src/1.utilities/variables.scss
+++ b/src/1.utilities/variables.scss
@@ -1,4 +1,4 @@
-$gap: 32px !default;
+$gap: 16px !default;
 
 // Breakpoints are defined by their min-size
 // mobile is implicitly defined as 0px.
@@ -9,21 +9,21 @@ $breakpoints:   (
 	"fullhd":     1344px+(2*$gap),
 )!default;
 
-// Colors
 $colors: (
-	"black":          hsl(0, 0%, 4%),
-	"dark":           hsl(0, 0%, 30%),
-	"grey":           hsl(0, 0%, 70%),
-	"light":          hsl(0, 0%, 98%),
+	"black":          hsl(231, 9%, 4%),
+	"dark":           hsl(231, 9%, 30%),
+	"grey":           hsl(231, 9%, 74%),
+	"light":          hsl(231, 9%, 98%),
+	"white":          hsl(231, 9%, 100%),
 
-	"red":            hsl(348, 86%, 61%),
-	"orange":         hsl(14, 100%, 53%),
-	"yellow":         hsl(48, 100%, 67%),
-	"green":          hsl(141, 53%, 53%),
-	"turquoise":      hsl(171, 100%, 41%),
-	"cyan":           hsl(204, 71%, 53%),
-	"blue":           hsl(217, 71%, 53%),
-	"purple":         hsl(271, 100%, 71%),
+	"red":            hsl(348, 91%, 50%),
+	"orange":         hsl(14, 91%, 50%),
+	"yellow":         hsl(44, 91%, 50%),
+	"green":          hsl(141, 91%, 45%),
+	"turquoise":      hsl(171, 91%, 45%),
+	"cyan":           hsl(204, 91%, 50%),
+	"blue":           hsl(217, 91%, 50%),
+	"purple":         hsl(271, 91%, 50%),
 	"lightred":       hsl(348, 86%, 81%),
 	"lightorange":    hsl(14, 100%, 73%),
 	"lightyellow":    hsl(48, 100%, 87%),
@@ -35,9 +35,10 @@ $colors: (
 )!default;
 
 $text:                map-get($colors, "black") !default;
-$border:              map-get($colors, "dark") !default;
+$border:              map-get($colors, "grey") !default;
 $border-width:        1px !default;
 
+$accent:              map-get($colors, "blue") !default;
 $link:                map-get($colors, "blue") !default;
 $link-hover:          map-get($colors, "dark") !default;
 $link-hover-border:   map-get($colors, "grey") !default;
@@ -48,8 +49,7 @@ $link-visited-border: map-get($colors, "grey") !default;
 $link-active:         map-get($colors, "dark") !default;
 $link-active-border:  map-get($colors, "grey") !default;
 
-// Typography
-$family-sans-serif: BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto",
+$family-sans-serif: "Inter", BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto",
   "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
   "Helvetica", "Arial", sans-serif !default;
 $family-serif:     serif !default;
@@ -64,16 +64,10 @@ $size-5: 1.25rem !default;
 $size-6: 1rem !default;
 $size-7: 0.75rem !default;
 
-$weight-light:    300 !default;
-$weight-normal:   400 !default;
-$weight-medium:   500 !default;
-$weight-semibold: 600 !default;
-$weight-bold:     700 !default;
-
-// Miscellaneous
 $easing:         ease-out !default;
+$speed:          86ms !default;
+
 $radius-small:   2px !default;
 $radius:         4px !default;
-$radius-large:   6px !default;
-$radius-rounded: 290486px !default;
-$speed:          86ms !default;
+$radius-large:   10px !default;
+$radius-rounded: 9999px;
