--- a/src/4.elements/button.scss
+++ b/src/4.elements/button.scss
@@ -1,52 +1,75 @@
-$button-background-color:    white !default;
-$button-border-color:        $border !default;
-$button-border-width:        $border-width !default;
-$button-color:               $text !default;
-$button-padding-vertical:    0.5em !default;
-$button-padding-horizontal:  1em !default;
+$button-background-color: white !default;
+$button-border-color: $border !default;
+$button-border-width: $border-width !default;
+$button-color: $text !default;
+$button-padding-vertical: 0.5em !default;
+$button-padding-horizontal: 1em !default;
 
-$button-hover-color:         $link-hover;
-$button-hover-border-color:  $link-hover-border;
+$button-hover-color: $link-hover;
+$button-hover-border-color: $link-hover-border;
 
-$button-active-color:        $link-active;
+$button-active-color: $link-active;
 $button-active-border-color: $link-active-border;
 
-$button-focus-color:         $link-focus;
-$button-focus-border-color:  $link-focus-border;
+$button-focus-color: $link-focus;
+$button-focus-border-color: $link-focus-border;
 
 .button {
-	background-color: $button-background-color;
-	border-color:     $button-border-color;
-	border-width:     $button-border-width;
-	border-style:     solid;
-	cursor:           pointer;
-	justify-content:  center;
-	text-align:       center;
-	white-space:      nowrap;
-	padding-bottom:   $button-padding-vertical;
-	padding-left:     $button-padding-horizontal;
-	padding-right:    $button-padding-horizontal;
-	padding-top:      $button-padding-vertical;
+  box-sizing: border-box;
+  position: relative;
+  border: 0;
+  border-radius: $radius;
+  cursor: pointer;
+  justify-content: center;
+  text-align: center;
+  white-space: nowrap;
+  padding: $button-padding-vertical $button-padding-horizontal;
 
-	&.is-hover, &:hover {
-		border-color: $button-hover-border-color;
-    color:        $button-hover-color;
-	}
+  &:not(.is-link)::before {
+    position: absolute;
+    content: "";
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    box-shadow: inset 0px 0px 2px 1px var(--f);
+    mix-blend-mode: luminosity;
+  }
 
-	&.is-active, &:active {
-		border-color: $button-active-border-color;
-    color:        $button-active-color;
-	}
+  &:not(.is-link)::after {
+    position: absolute;
+    content: "";
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    border-color: $button-border-color;
+    border-width: $button-border-width;
+    border-style: solid;
+    border-radius: $radius;
+    mix-blend-mode: multiply;
+  }
 
-	&.is-focus, &:focus {
-		border-color: $button-focus-border-color;
-    color:        $button-focus-color;
-	}
+  &.is-hover,
+  &:hover {
+    border-color: $button-hover-border-color;
+  }
 
-	&.is-link {
-		background-color: transparent;
-		border-color:     transparent;
-		color:            $button-color;
-		text-decoration:  underline;
-	}
+  &.is-active,
+  &:active {
+    border-color: $button-active-border-color;
+  }
+
+  &.is-focus,
+  &:focus {
+    border-color: $button-focus-border-color;
+  }
+
+  &.is-link {
+    background-color: transparent;
+    border-color: transparent;
+    color: $button-color;
+    padding: 0;
+    text-decoration: underline;
+  }
 }
