--- a/src/4.elements/button.scss
+++ b/src/4.elements/button.scss
@@ -6,6 +6,7 @@ $button-padding-vertical: 0.5em !default;
 $button-padding-horizontal: 1em !default;
 
 .button {
+  --bo: $button-border-color;
   box-sizing: border-box;
   position: relative;
   border: 0;
@@ -26,7 +27,7 @@ $button-padding-horizontal: 1em !default;
     left: 0;
     box-shadow: inset 0px 0px 3px rgba(var(--f), 0.4);
     border-radius: $radius;
-		z-index: 1;
+    z-index: 1;
   }
 
   &:not(.is-link)::after {
@@ -36,11 +37,11 @@ $button-padding-horizontal: 1em !default;
     right: 0;
     bottom: 0;
     left: 0;
-    border-color: $button-border-color;
+    border-color: var(--bo);
     border-width: $button-border-width;
     border-style: solid;
     border-radius: $radius;
-		mix-blend-mode: multiply;
+    mix-blend-mode: multiply;
   }
 
   &.is-hover:not(.is-link),
