--- a/src/2.base/form.scss
+++ b/src/2.base/form.scss
@@ -16,7 +16,8 @@ $textarea-min-height: 8em !default;
 %input-textarea {
   box-sizing: border-box;
   box-shadow: $input-shadow;
-  border-color: $input-border;
+  background-color: rgba(var(--b), 1);
+  border-color: rgba(var(--bo), 1);
   border-width: $input-border-width;
   border-style: solid;
   padding: $input-padding-vertical $input-padding-horizontal;
