--- a/src/4.elements/box.scss
+++ b/src/4.elements/box.scss
@@ -1,4 +1,3 @@
-$box-background-color: map-get($colors, "white") !default;
 $box-padding: 0.75rem !default;
 $box-border: $border !default;
 $box-border-width: $border-width !default;
@@ -6,8 +5,8 @@ $box-border-radius: $radius !default;
 
 .box {
 	display: flex;
-	background-color: $box-background-color;
-	border-color: $box-border;
+	background-color: rgba(var(--b), 1);
+	border-color: rgba(var(--bo), 1);
 	border-width: $box-border-width;
 	border-style: solid;
 	border-radius: $box-border-radius;
