--- a/src/5.components/card.scss
+++ b/src/5.components/card.scss
@@ -10,14 +10,14 @@ $card-margin-top: 1rem !default;
 $card-margin-bottom: 1rem !default;
 
 .card {
-  background-color: $card-background-color;
-  border-color: $card-border;
+  background-color: rgba(var(--b), 1);
+  border-color: rgba(var(--bo), 1);
   border-width: $card-border-width;
   border-style: solid;
   border-radius: $card-border-radius;
 
-	@include mt($card-margin-top);
-	@include mb($card-margin-bottom);
+  @include mt($card-margin-top);
+  @include mb($card-margin-bottom);
 
   > *:not(:first-child) {
     border-top-color: $card-border-inner;
@@ -31,15 +31,23 @@ $card-margin-bottom: 1rem !default;
   padding: $card-padding;
 }
 
+.card-body {
+  > *:not(:first-child) {
+    border-top-color: $card-border-inner;
+    border-top-width: $card-border-inner-width;
+    border-top-style: solid;
+  }
+}
+
 .card-item {
   display: flex;
   padding: $card-padding;
 
-  .is-selectable > & {
-    .card-item:hover {
-      background-color: map-get($colors, "light");
-    }
-  }
+  .card.is-selectable > &:hover,
+	.card.is-selectable > .card-body > &:hover {
+		background-color: map-get($colors, "light");
+		mix-blend-mode: multiply;
+	}
 
   &:not(.is-vertical) {
     align-items: center;
