Fix border color helper

--- a/src/2.base/utils.scss
+++ b/src/2.base/utils.scss
@@ -120,7 +120,7 @@
     --b: #{toChannels($val)};
     background-color: $val;
   }
-  .bo-#{key} {
+  .bo-#{$key} {
     --bo: #{toChannels($val)};
     border-color: $val;
   }
