--- a/src/1.utilities/variables.scss
+++ b/src/1.utilities/variables.scss
@@ -1,33 +1,35 @@
 @use "sass:color";
 
-$gap: 16px !default;
+$breakpoint-gap: 16px !default;
 
 // Breakpoints are defined by their min-size
 // mobile is implicitly defined as 0px.
 $breakpoints:   (
 	"tablet":     700px,
-	"desktop":    960px+(2*$gap),
-	"widescreen": 1152px+(2*$gap),
-	"fullhd":     1344px+(2*$gap),
+	"desktop":    960px+(2*$breakpoint-gap),
+	"widescreen": 1152px+(2*$breakpoint-gap),
+	"fullhd":     1344px+(2*$breakpoint-gap),
 )!default;
 
 $colors: (
 	"black":          hsl(231, 9%, 4%),
 	"dark":           hsl(231, 9%, 30%),
+	"greydark":       hsl(231, 9%, 52%),
 	"grey":           hsl(231, 9%, 74%),
+	"greylight":      hsl(231, 9%, 92%),
 	"light":          hsl(231, 9%, 98%),
 	"white":          hsl(231, 9%, 100%),
 
-	"red":            hsl(348, 91%, 50%),
-	"orange":         hsl(14,  91%, 50%),
-	"yellow":         hsl(44,  91%, 50%),
-	"green":          hsl(141, 91%, 45%),
-	"turquoise":      hsl(171, 91%, 45%),
-	"cyan":           hsl(204, 91%, 50%),
-	"blue":           hsl(217, 91%, 50%),
-	"purple":         hsl(271, 91%, 50%),
+	"red":            hsl(348, 91%, 45%),
+	"orange":         hsl(24,  92%, 46%),
+	"yellow":         hsl(44,  93%, 48%),
+	"green":          hsl(141, 91%, 40%),
+	"turquoise":      hsl(171, 91%, 40%),
+	"cyan":           hsl(204, 91%, 45%),
+	"blue":           hsl(217, 91%, 43%),
+	"purple":         hsl(271, 91%, 43%),
 	"lightred":       hsl(348, 95%, 95%),
-	"lightorange":    hsl(14,  95%, 95%),
+	"lightorange":    hsl(24,  95%, 95%),
 	"lightyellow":    hsl(48,  95%, 95%),
 	"lightgreen":     hsl(141, 95%, 90%),
 	"lightturquoise": hsl(171, 95%, 90%),
@@ -76,13 +78,4 @@ $radius-large:   10px !default;
 $radius-rounded: 9999px;
 
 $shadow:         0 2px 2px rgba(0,0,0,.075);
-
-@function toChannels($color) {
-	@return red($color), green($color), blue($color);
-}
-
-:root {
-	--f: #{toChannels($text)};
-	--b: #{toChannels($background)};
-	--bo: #{toChannels($border)};
-}
+$hover-background: map-get($colors, "light");
