--- a/src/2.base/form.scss
+++ b/src/2.base/form.scss
@@ -36,7 +36,10 @@ $textarea-min-height: 8em !default;
 	}
 }
 
-input {
+input[type="text"],
+input[type="password"],
+input[type="date"],
+{
 	@extend %input-textarea;
 }
 
