Fix variable name / value pair

--- a/src/1.utilities/variables.scss
+++ b/src/1.utilities/variables.scss
@@ -82,6 +82,6 @@ $hover-background: map-get($colors, "light");
 
 :root {
 	@each $name, $value in $colors {
-		--#{name}: #{value};
+		--#{$name}: #{$value};
 	}
 }
